21, small teqi elave etdim icerisine lorem 5 yazdim

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>ilk git proyekti</h1>
     <p>githuba yuklenecek</p>
+    <small>Lorem ipsum dolor sit amet.</small>
 </body>
 </html>
